--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "external/Touch.Unit"]
 	path = external/Touch.Unit
-	url = git@github.com:codefoco-forks/Touch.Unit.git
+url=https://github.com/codefoco-forks/Touch.Unit.git
