--- a/targets/RunSimulatorTests.targets
+++ b/targets/RunSimulatorTests.targets
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
-        <TouchServerExe Condition=" '$(TouchServerExe)' == '' ">$(OutputPath)/Touch.Server.exe</TouchServerExe>
+        <TouchServerExe Condition=" '$(TouchServerExe)' == '' ">$(MSBuildProjectDirectory)/tools/Touch.Server.exe</TouchServerExe>
         <MLaunch Condition=" '$(MLaunch)' == '' ">/Developer/MonoTouch/usr/bin/mlaunch</MLaunch>
-        <TargetFrameworkIdentifier Condition=" '$(TargetFrameworkIdentifier)' == ''">Xamarin.TVOS</TargetFrameworkIdentifier>
+        <TargetFrameworkIdentifier Condition=" '$(TargetFrameworkIdentifier)' == ''">Xamarin.iOS</TargetFrameworkIdentifier>
         <DeviceKind Condition=" '$(TargetFrameworkIdentifier)' == 'Xamarin.iOS'">iPhone</DeviceKind>
         <DeviceKind Condition=" '$(TargetFrameworkIdentifier)' == 'Xamarin.TVOS'">Apple TV</DeviceKind>
         <DevicesXmlFile>$(OutputPath)/DevicesXmlFile.xml</DevicesXmlFile>
