--- a/devops/azure-pipelines.yml
+++ b/devops/azure-pipelines.yml
@@ -4,6 +4,9 @@ pool:
 
 
 steps:
+- checkout: self 
+  submodules: true
+
 - powershell: 'Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString(''https://chocolatey.org/install.ps1''))'
   displayName: 'Install Choco'
 
