--- a/devops/azure-pipelines.yml
+++ b/devops/azure-pipelines.yml
@@ -1,23 +1,21 @@
+
+# Repo: codefoco/AzureDevopsTemplates
+resources:
+  repositories:
+    - repository: templates
+      type: github
+      name: codefoco/AzureDevopsTemplates
+
 pool:
   vmImage: 'windows-2019'
   demands:
   - msbuild
   - visualstudio
+  - vstest
 
 steps:
-- checkout: self 
-  submodules: true
-
-- powershell: 'Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString(''https://chocolatey.org/install.ps1''))'
-  displayName: 'Install Choco'
-
-- script: 'choco install gitversion.portable --pre '
-  displayName: 'Install GitVersion'
-
-- task: NuGetToolInstaller@1
-  displayName: 'Use NuGet 5.4.0'
-  inputs:
-    versionSpec: 5.4.0
+- template: common-dotnet.yml@templates
+- template: common-macos.yml@templates
 
 - task: PowerShell@2
   displayName: 'PreBuild Script'
@@ -60,39 +58,4 @@ steps:
     filePath: ./devops/Publish.ps1
     arguments: Codefoco.Touch.Server
 
-- task: SendTelegramNotification@0
-  condition: in(variables['Agent.JobStatus'], 'SucceededWithIssues')
-  inputs:
-    botToken: '$(botToken)'
-    chats: '$(chatId)'
-    taskStatus: false
-    message: |
-            ⚠️ <b>Warning!</b>  <a href="$(Build.Repository.Uri)">$(Build.DefinitionName)</a> (<code>$(Build.SourceBranchName)</code>)
-            <pre>$(Build.SourceVersion)</pre>
-            $(Build.SourceVersionMessage) by $(Build.QueuedBy)
-
-- task: SendTelegramNotification@0
-  condition: in(variables['Agent.JobStatus'], 'Failed')
-  inputs:
-    botToken: '$(botToken)'
-    chats: '$(chatId)'
-    taskStatus: false
-    buildQueuedBy: false
-    message: |
-            ❌ <b>Fail!</b>  <a href="$(Build.Repository.Uri)">$(Build.DefinitionName)</a> (<code>$(Build.SourceBranchName)</code>)
-            <pre>$(Build.SourceVersion)</pre>
-            $(Build.SourceVersionMessage) by $(Build.QueuedBy)
-
-- task: SendTelegramNotification@0
-  condition: in(variables['Agent.JobStatus'], 'Succeeded')
-  inputs:
-    botToken: '$(botToken)'
-    chats: '$(chatId)'
-    taskStatus: false
-    buildQueuedBy: false
-    message: |
-            ✅ <b>Success!</b>  <a href="$(Build.Repository.Uri)">$(Build.DefinitionName)</a> (<code>$(Build.SourceBranchName)</code>)
-            <pre>$(Build.SourceVersion)</pre>
-            $(Build.SourceVersionMessage) by $(Build.QueuedBy)
-
-# 
+- template: send-telegram.yml@templates
