--- a/devops/azure-pipelines.yml
+++ b/devops/azure-pipelines.yml
@@ -16,7 +16,7 @@ pool:
 
 steps:
 - template: common-dotnet.yml@templates
-- template: common-macos.yml@templates
+- template: common-win.yml@templates
 
 - task: PowerShell@2
   displayName: 'PreBuild Script'
